--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
+    "@percy/cli": "^1.0.0-beta.70",
+    "@percy/cypress": "^3.1.1",
     "cypress": "^8.3.1",
     "cypress-cucumber-preprocessor": "^2.5.5"
   }
